{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 155,
  "lineage": "87ae6f96-d976-fe45-2118-f798b03942a0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/rgg/providers/Microsoft.Network/networkInterfaces/NicVM",
            "internal_domain_name_suffix": "eegflhxgix1ubigxq20lkdwblc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/rgg/providers/Microsoft.Network/publicIPAddresses/acceptanceTestPublicIp1",
                "subnet_id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/rgg/providers/Microsoft.Network/virtualNetworks/VN1/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "name": "NicVM",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "rgg"
          },
          "dependencies": [
            "azurerm_public_ip.pubip",
            "azurerm_resource_group.rgg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "netint3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RG3/providers/Microsoft.Network/networkInterfaces/nic3",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.12.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RG3/providers/Microsoft.Network/publicIPAddresses/pulicip3",
                "subnet_id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RG3/providers/Microsoft.Network/virtualNetworks/vn3/subnets/subnet5"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-A9-56-FB",
            "name": "nic3",
            "private_ip_address": "10.12.0.4",
            "private_ip_addresses": [
              "10.12.0.4"
            ],
            "resource_group_name": "RG3",
            "virtual_machine_id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RG3/providers/Microsoft.Compute/virtualMachines/VM3"
          },
          "dependencies": [
            "azurerm_public_ip.pubip3",
            "azurerm_resource_group.rg22",
            "azurerm_resource_group.rg3",
            "azurerm_subnet.subnet3",
            "azurerm_subnet.subnet5",
            "azurerm_virtual_network.VN2",
            "azurerm_virtual_network.VN3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/say22/providers/Microsoft.Network/networkInterfaces/nic2",
            "internal_domain_name_suffix": "nylo3zz3iveubf3sozkpanwvcc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/say22/providers/Microsoft.Network/publicIPAddresses/pulicip2",
                "subnet_id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/say22/providers/Microsoft.Network/virtualNetworks/VN2/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "name": "nic2",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "say22"
          },
          "dependencies": [
            "azurerm_public_ip.pubip2",
            "azurerm_resource_group.rg22",
            "azurerm_subnet.subnet3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "appnsg-link",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/rgg/providers/Microsoft.Network/networkInterfaces/NicVM|/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/rgg/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "network_interface_id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/rgg/providers/Microsoft.Network/networkInterfaces/NicVM",
            "network_security_group_id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/rgg/providers/Microsoft.Network/networkSecurityGroups/app-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.Network_interface",
            "azurerm_network_security_group.appnsg",
            "azurerm_public_ip.pubip",
            "azurerm_resource_group.rgg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "appnsg-link2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/say22/providers/Microsoft.Network/networkInterfaces/nic2|/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/say22/providers/Microsoft.Network/networkSecurityGroups/app-nsg2",
            "network_interface_id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/say22/providers/Microsoft.Network/networkInterfaces/nic2",
            "network_security_group_id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/say22/providers/Microsoft.Network/networkSecurityGroups/app-nsg2"
          },
          "dependencies": [
            "azurerm_network_interface.nic2",
            "azurerm_network_security_group.appnsg2",
            "azurerm_public_ip.pubip2",
            "azurerm_resource_group.rg22",
            "azurerm_subnet.subnet3",
            "azurerm_virtual_network.VN2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "appnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/rgg/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "eastus",
            "name": "app-nsg",
            "resource_group_name": "rgg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rgg",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "appnsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/say22/providers/Microsoft.Network/networkSecurityGroups/app-nsg2",
            "location": "eastus",
            "name": "app-nsg2",
            "resource_group_name": "say22",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg22",
            "azurerm_virtual_network.VN2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/rgg/providers/Microsoft.Network/networkSecurityGroups/nsg4",
            "location": "eastus",
            "name": "nsg4",
            "resource_group_name": "rgg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/rgg/providers/Microsoft.Network/publicIPAddresses/acceptanceTestPublicIp1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.25.106.146",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "acceptanceTestPublicIp1",
            "resource_group_name": "rgg",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pubip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/say22/providers/Microsoft.Network/publicIPAddresses/pulicip2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.25.111.171",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pulicip2",
            "resource_group_name": "say22",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg22",
            "azurerm_subnet.subnet3",
            "azurerm_virtual_network.VN2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pubip3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RG3/providers/Microsoft.Network/publicIPAddresses/pulicip3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.232.106.49",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pulicip3",
            "resource_group_name": "RG3",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg22",
            "azurerm_subnet.subnet3",
            "azurerm_virtual_network.VN2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pubip4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RG3/providers/Microsoft.Network/publicIPAddresses/pulicip4",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.231.94.60",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pulicip4",
            "resource_group_name": "RG3",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg22",
            "azurerm_subnet.subnet3",
            "azurerm_virtual_network.VN2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/rgg/providers/Microsoft.Network/virtualNetworks/VN1/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rgg",
            "virtual_network_name": "VN1"
          },
          "dependencies": [
            "azurerm_resource_group.rgg",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/rgg/providers/Microsoft.Network/virtualNetworks/VN1/subnets/subnet2",
            "name": "subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rgg",
            "virtual_network_name": "VN1"
          },
          "dependencies": [
            "azurerm_resource_group.rgg",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/say22/providers/Microsoft.Network/virtualNetworks/VN2/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "say22",
            "virtual_network_name": "VN2"
          },
          "dependencies": [
            "azurerm_resource_group.rg22",
            "azurerm_virtual_network.VN2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet5",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.12.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RG3/providers/Microsoft.Network/virtualNetworks/vn3/subnets/subnet5",
            "name": "subnet5",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG3",
            "virtual_network_name": "vn3"
          },
          "dependencies": [
            "azurerm_resource_group.rg3",
            "azurerm_virtual_network.VN3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgasso4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VN2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e7ee166e-453d-4049-97b2-7654f036d512",
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/say22/providers/Microsoft.Network/virtualNetworks/VN2",
            "location": "eastus",
            "name": "VN2",
            "resource_group_name": "say22",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/say22/providers/Microsoft.Network/virtualNetworks/VN2/subnets/subnet1",
                "name": "subnet1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg22"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VN3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.12.0.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8b1c9aeb-d29e-4a43-a31d-5dbc54fe8c35",
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RG3/providers/Microsoft.Network/virtualNetworks/vn3",
            "location": "eastus",
            "name": "vn3",
            "resource_group_name": "RG3",
            "subnet": [
              {
                "address_prefix": "10.12.0.0/24",
                "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RG3/providers/Microsoft.Network/virtualNetworks/vn3/subnets/subnet5",
                "name": "subnet5"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VN4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.12.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "fbff8317-1288-4f3c-9aaf-066e110f2e3c",
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/rgg/providers/Microsoft.Network/virtualNetworks/VN4",
            "location": "eastus",
            "name": "VN4",
            "resource_group_name": "rgg"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9e550c21-45e6-40f7-a0d7-8734b50ec15a",
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/rgg/providers/Microsoft.Network/virtualNetworks/VN1",
            "location": "eastus",
            "name": "VN1",
            "resource_group_name": "rgg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/rgg/providers/Microsoft.Network/virtualNetworks/VN1/subnets/subnet1",
                "name": "subnet1"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/rgg/providers/Microsoft.Network/virtualNetworks/VN1/subnets/subnet2",
                "name": "subnet2"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rgg"
          ]
        }
      ]
    }
  ]
}